--- a/request.html
+++ b/request.html
@@ -152,16 +152,7 @@
     </section>
 
     <!-- banner -->
-    <section
-      class="global-banner"
-      style="background-image: url(images/career/contact-banner.jpg)"
-    >
-      <div class="container">
-        <div class="global-wrapper">
-          <div class="global-content"></div>
-        </div>
-      </div>
-    </section>
+      
 
     <!-- main -->
     <main class="request-section">
@@ -272,7 +263,7 @@
           </div>
 
           <div class="form-right">
-            <img src="images/request-bg.jpg" alt="Professional Man" />
+            <img src="images/our-story-header-img-1.jpg.png" alt="Professional Man" />
           </div>
         </div>
       </section>
