fix color and layout

--- a/index1.html
+++ b/index1.html
@@ -52,10 +52,10 @@
                   <a href="about1.html">About Us</a>
                 </li>
                 <li id="nav-service">
-                  <a href="service1.html">Service</a>
+                  <a href="#">Service</a>
                 </li>
                 <li id="nav-career"><a href="career1.html">Career</a></li>
-                <li><a href="contact1.html" id="nav-contact">Contact Us</a></li>
+                <li><a href="#" id="nav-contact">Contact Us</a></li>
               </ul>
             </div>
             <div class="contact-btn">
@@ -227,57 +227,59 @@
       <!-- home section about us section -->
       <section class="introduction-section">
         <div class="container">
-          <!-- Section Heading -->
-          <div class="intro-header">
-            <h2>ABOUT <span>IT WINGS</span></h2>
-            <p>
-              We are a next-generation IT service company transforming
-              businesses through technology, innovation, and excellence.
-            </p>
-          </div>
-
-          <!-- Main Content -->
-          <div class="intro-wrapper">
-            <!-- Left Image -->
-            <div class="intro-image">
-              <figure>
-                <img src="images/career-1.jpg" alt="IT Services" />
-              </figure>
+          <div class="introduction-wrapper">
+            <!-- Section Heading -->
+            <div class="intro-header">
+              <h2>ABOUT <span>IT WINGS</span></h2>
+              <p>
+                We are a next-generation IT service company transforming
+                businesses through technology, innovation, and excellence.
+              </p>
             </div>
 
-            <!-- Right Content -->
-            <div class="intro-content">
-              <h3>Innovating the Future</h3>
-              <p>
-                At IT Wings Webtech Solutions, we empower businesses with
-                cutting-edge IT solutions that drive efficiency, security, and
-                growth. Our team of experts specializes in software development,
-                cloud computing, automation, and digital transformation to
-                ensure your business stays ahead in the modern digital
-                landscape.
-              </p>
-              <p>
-                From strategy to execution, we deliver technology that matters —
-                built for performance, scalability, and long-term success.
-              </p>
+            <!-- Main Content -->
+            <div class="intro-wrapper">
+              <!-- Left Image -->
+              <div class="intro-image">
+                <figure>
+                  <img src="images/career-1.jpg" alt="IT Services" />
+                </figure>
+              </div>
 
-              <!-- Info Boxes -->
-              <div class="intro-stats">
-                <div class="stat-item">
-                  <h4>150+</h4>
-                  <p>Projects Delivered</p>
-                </div>
-                <div class="stat-item">
-                  <h4>98%</h4>
-                  <p>Client Satisfaction</p>
-                </div>
-                <div class="stat-item">
-                  <h4>24/7</h4>
-                  <p>Technical Support</p>
-                </div>
-                <div class="stat-item">
-                  <h4>10+</h4>
-                  <p>Years of Experience</p>
+              <!-- Right Content -->
+              <div class="intro-content">
+                <h3>Innovating the Future</h3>
+                <p>
+                  At IT Wings Webtech Solutions, we empower businesses with
+                  cutting-edge IT solutions that drive efficiency, security, and
+                  growth. Our team of experts specializes in software
+                  development, cloud computing, automation, and digital
+                  transformation to ensure your business stays ahead in the
+                  modern digital landscape.
+                </p>
+                <p>
+                  From strategy to execution, we deliver technology that matters
+                  — built for performance, scalability, and long-term success.
+                </p>
+
+                <!-- Info Boxes -->
+                <div class="intro-stats">
+                  <div class="stat-item">
+                    <h4>150+</h4>
+                    <p>Projects Delivered</p>
+                  </div>
+                  <div class="stat-item">
+                    <h4>98%</h4>
+                    <p>Client Satisfaction</p>
+                  </div>
+                  <div class="stat-item">
+                    <h4>24/7</h4>
+                    <p>Technical Support</p>
+                  </div>
+                  <div class="stat-item">
+                    <h4>10+</h4>
+                    <p>Years of Experience</p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -429,7 +431,6 @@
                 your business thrive in the digital era.
               </p>
             </div>
-
             <div class="services-grid">
               <!-- Govt Services -->
               <a href="service1.html#govt" class="service-card">
