delete previous file

--- a/career1.html
+++ b/career1.html
@@ -32,18 +32,16 @@
             <div class="nav-menu">
               <ul class="d-flex al-center">
                 <li id="nav-home">
-                  <a href="index1.html">Home</a>
+                  <a href="index1.html" class="active">Home</a>
                 </li>
                 <li id="nav-about">
                   <a href="about1.html">About Us</a>
                 </li>
                 <li id="nav-service">
-                  <a href="service1.html">Service</a>
+                  <a href="#">Service</a>
                 </li>
-                <li id="nav-career">
-                  <a href="career1.html" class="active">Career</a>
-                </li>
-                <li><a href="contact1.html" id="nav-contact">Contact Us</a></li>
+                <li id="nav-career"><a href="career1.html">Career</a></li>
+                <li><a href="#" id="nav-contact">Contact Us</a></li>
               </ul>
             </div>
             <div class="contact-btn">
@@ -53,6 +51,7 @@
         </div>
       </nav>
     </header>
+    
     <!-- home section -->
     <section class="home-menu-service-setion" id="home-menu-service-setion">
       <div class="home-menu-service-container">
