--- a/service1.html
+++ b/service1.html
@@ -36,7 +36,7 @@
       <nav class="nav-bar">
         <div class="container">
           <div class="nav-wrapper d-flex al-center jc-between">
-            <div class="logo d-flex al-center jc-center">
+            <div class="logo d-flex al-center jc-between">
               <a href="#">
                 <figure>
                   <img src="images/Baby.png" alt="logo" />
@@ -49,15 +49,17 @@
             </div>
             <div class="nav-menu">
               <ul class="d-flex al-center">
-                <li id="nav-home"><a href="index1.html">Home</a></li>
+                <li id="nav-home">
+                  <a href="index1.html" class="active">Home</a>
+                </li>
                 <li id="nav-about">
                   <a href="about1.html">About Us</a>
                 </li>
                 <li id="nav-service">
-                  <a href="service1.html">Service</a>
+                  <a href="#">Service</a>
                 </li>
                 <li id="nav-career"><a href="career1.html">Career</a></li>
-                <li id="nav-contact"><a href="contact1.html">Contact Us</a></li>
+                <li><a href="#" id="nav-contact">Contact Us</a></li>
               </ul>
             </div>
             <div class="contact-btn">
