--- a/serviceInfo.html
+++ b/serviceInfo.html
@@ -41,10 +41,10 @@
                   <a href="about1.html">About Us</a>
                 </li>
                 <li id="nav-service">
-                  <a href="service1.html">Service</a>
+                  <a href="#">Service</a>
                 </li>
                 <li id="nav-career"><a href="career1.html">Career</a></li>
-                <li><a href="contact1.html" id="nav-contact">Contact Us</a></li>
+                <li><a href="#" id="nav-contact">Contact Us</a></li>
               </ul>
             </div>
             <div class="contact-btn">
@@ -145,7 +145,7 @@
     <!-- ===== Service Banner ===== -->
     <section
       class="service-banner"
-      style="background-image: url(images/career-1.jpg);"
+      style="background-image: url(images/career-1.jpg)"
     >
       <!-- <div class="overlay"></div> -->
       <!-- <div class="banner-content">
