--- a/request.html
+++ b/request.html
@@ -32,7 +32,7 @@
       <nav class="nav-bar">
         <div class="container">
           <div class="nav-wrapper d-flex al-center jc-between">
-            <div class="logo d-flex al-center jc-center">
+            <div class="logo d-flex al-center jc-between">
               <a href="#">
                 <figure>
                   <img src="images/Baby.png" alt="logo" />
@@ -45,15 +45,17 @@
             </div>
             <div class="nav-menu">
               <ul class="d-flex al-center">
-                <li id="nav-home"><a href="index1.html">Home</a></li>
+                <li id="nav-home">
+                  <a href="index1.html" class="active">Home</a>
+                </li>
                 <li id="nav-about">
                   <a href="about1.html">About Us</a>
                 </li>
                 <li id="nav-service">
-                  <a href="service1.html">Service</a>
+                  <a href="#">Service</a>
                 </li>
                 <li id="nav-career"><a href="career1.html">Career</a></li>
-                <li id="nav-contact"><a href="contact1.html">Contact Us</a></li>
+                <li><a href="#" id="nav-contact">Contact Us</a></li>
               </ul>
             </div>
             <div class="contact-btn">
@@ -152,7 +154,6 @@
     </section>
 
     <!-- banner -->
-      
 
     <!-- main -->
     <main class="request-section">
@@ -263,7 +264,10 @@
           </div>
 
           <div class="form-right">
-            <img src="images/our-story-header-img-1.jpg.png" alt="Professional Man" />
+            <img
+              src="images/our-story-header-img-1.jpg.png"
+              alt="Professional Man"
+            />
           </div>
         </div>
       </section>
