fix job dec page

--- a/job_des.html
+++ b/job_des.html
@@ -135,92 +135,204 @@
       </div>
     </section>
 
-    <section>
-      <div class="container">
-        <div class="job_des-wrapper">
-          <!-- Job Description Section -->
-          <div class="job-container">
-            <h2 class="section-title">Job Description</h2>
+    <main>
+      <!-- ===== Job Banner ===== -->
+      <section
+        class="job-banner"
+        style="background-image: url('images/career-3.jpg')"
+      >
+        <div class="container">
+          <div class="banner-content">
+            <h1>Azure DevOps Engineer</h1>
+            <p>Join our cloud engineering team and build the future with us.</p>
+          </div>
+        </div>
+      </section>
 
-            <div class="job-details-grid">
-              <div class="job-item">
-                <span class="label">Skill Set :</span> Azure DevOps
+      <!-- ===== Job Description Section ===== -->
+      <section class="job-description-section">
+        <div class="container">
+          <div class="job-content-wrapper">
+            <!-- Left Content -->
+            <div class="job-details">
+              <h2 class="section-title">Job Description</h2>
+
+              <div class="job-details-grid">
+                <div class="job-item"><span>Skill Set:</span> Azure DevOps</div>
+                <div class="job-item">
+                  <span>Total Experience:</span> 5 - 8 Years
+                </div>
+                <div class="job-item">
+                  <span>Location:</span> Bengaluru, India
+                </div>
+                <div class="job-item"><span>Domain:</span> IT</div>
+                <div class="job-item"><span>Openings:</span> 1</div>
+                <div class="job-item"><span>Posted:</span> 07/11/2025</div>
+                <div class="job-item"><span>Expiry:</span> 31/12/2025</div>
+                <div class="job-item"><span>Reference No:</span> 4002593</div>
               </div>
-              <div class="job-item">
-                <span class="label">Total Experience :</span> 5.00 to 8.00 Years
-              </div>
-              <div class="job-item">
-                <span class="label">Job Post Date :</span> 07/11/2025
-              </div>
-              <div class="job-item">
-                <span class="label">Job Expiry Date :</span> 31/12/2025
-              </div>
-              <div class="job-item">
-                <span class="label">Location :</span> Bengaluru [India]
-              </div>
-              <div class="job-item">
-                <span class="label">No of Openings :</span> 1
-              </div>
-              <div class="job-item">
-                <span class="label">Job Reference No :</span> 4002593
-              </div>
-              <div class="job-item"><span class="label">Domain :</span> IT</div>
+
+              <hr />
+
+              <h2 class="section-title">Job Summary</h2>
+              <p class="job-summary">
+                As an Azure DevOps Engineer, you’ll architect and implement
+                modern CI/CD pipelines, automate cloud infrastructure using
+                Terraform and ARM templates, and enhance deployment performance
+                through containerization with Kubernetes. Collaborate with
+                developers to streamline delivery, improve monitoring, and
+                ensure optimal cloud scalability and security.
+              </p>
+
+              <ul class="job-responsibilities">
+                <li>Design, automate, and maintain Azure infrastructure.</li>
+                <li>
+                  Implement CI/CD pipelines for code integration and deployment.
+                </li>
+                <li>Monitor and optimize Kubernetes clusters.</li>
+                <li>
+                  Collaborate with cross-functional teams to deliver
+                  high-quality solutions.
+                </li>
+              </ul>
             </div>
 
-            <div class="button-area">
-              <button class="btn apply">APPLY NOW</button>
-              <button class="btn recommend">RECOMMEND TO FRIEND</button>
-            </div>
+            <!-- Right Side: Apply Box -->
+            <aside class="apply-box">
+              <div class="apply-card">
+                <h3>Interested in this role?</h3>
+                <p>Be part of our growing technology team.</p>
+                <a href="apply.html" class="apply-btn">Apply Now</a>
+              </div>
+            </aside>
+          </div>
+        </div>
+      </section>
 
-            <hr />
-
-            <h2 class="section-title">Job Summary</h2>
-
-            <p class="job-summary">
-              Design, implement, and manage infrastructure using Terraform and
-              ARM templates for Azure cloud platforms. Develop and maintain
-              reusable Terraform modules. Monitor and troubleshoot infra issues,
-              ensuring proactive maintenance. Implement CI/CD pipelines using
-              Azure DevOps: Azure Pipelines, Azure Repos, Azure Artifacts. Write
-              YAML pipelines for IaC and deployment processes. Manage container
-              orchestration with Kubernetes. Work with Azure Data Bricks, Data
-              Lake, and Azure Storage. Hands-on experience with APIM, Azure
-              Functions, App Insights, Azure Monitoring, Event Grid, and Service
-              Bus.
+      <!-- ===== Recommend Section ===== -->
+      <section class="recommend-section">
+        <div class="container">
+          <div class="recommend-wrapper">
+            <h2>Recommend to a Friend</h2>
+            <p>
+              Know someone perfect for this role? Send them the opportunity!
             </p>
+
+            <form class="recommend-form">
+              <div class="form-grid">
+                <div class="form-group">
+                  <label>Your Name*</label>
+                  <input type="text" placeholder="Enter your name" />
+                </div>
+                <div class="form-group">
+                  <label>Your Email*</label>
+                  <input type="email" placeholder="Enter your email" />
+                </div>
+                <div class="form-group">
+                  <label>Friend’s Name*</label>
+                  <input type="text" placeholder="Enter your friend's name" />
+                </div>
+                <div class="form-group">
+                  <label>Friend’s Email*</label>
+                  <input type="email" placeholder="Enter your friend's email" />
+                </div>
+              </div>
+
+              <button type="submit" class="submit-btn">
+                Submit Recommendation
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- footer -->
+    <footer class="footer">
+      <div class="footer-cta">
+        <div class="container">
+          <h2>Ready to work with us?</h2>
+          <p>
+            Join us to experience cutting-edge industrial solutions that drive
+            innovation and lasting success.
+          </p>
+          <a href="contact.html" class="btn-primary">Get in Touch</a>
+        </div>
+      </div>
+
+      <div class="footer-main">
+        <div class="container footer-grid">
+          <!-- Logo & About -->
+          <div class="footer-col about">
+            <img
+              src="images/service-banner.jpg"
+              alt="ProFactory Logo"
+              class="footer-logo"
+            />
+            <p>
+              We are committed to providing personalized industrial solutions
+              that transform your business.
+            </p>
+            <div class="social-icons">
+              <a href="#" target="_blank"
+                ><i class="fa-brands fa-linkedin-in"></i
+              ></a>
+              <a href="#" target="_blank"
+                ><i class="fa-brands fa-x-twitter"></i
+              ></a>
+              <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+              <a href="#" target="_blank"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+            </div>
           </div>
 
-          <!-- Recommend Section -->
-          <div class="recommend-box">
-            <h2 class="Jobhead">Recommend to Friend</h2>
+          <!-- Quick Links -->
+          <div class="footer-col">
+            <h4>Quick Links</h4>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Services</a></li>
+            </ul>
+          </div>
 
-            <div class="form-grid">
-              <div class="form-group">
-                <label>Your Name*</label>
-                <input type="text" />
-              </div>
+          <!-- Legal -->
+          <div class="footer-col">
+            <h4>Security</h4>
+            <ul>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Help</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+          </div>
 
-              <div class="form-group">
-                <label>Your Email ID*</label>
-                <input type="email" />
-              </div>
-
-              <div class="form-group">
-                <label>Your Friend Name*</label>
-                <input type="text" />
-              </div>
-
-              <div class="form-group">
-                <label>Your Friend Email Id*</label>
-                <input type="email" />
-              </div>
-            </div>
-
-            <button class="submit-btn">SUBMIT</button>
+          <!-- Contact Info -->
+          <div class="footer-col">
+            <h4>Contact</h4>
+            <ul class="contact-info">
+              <li><a href="tel:+91123654789">+91 123654789</a></li>
+              <li>
+                <a href="mailto:info@domainname.com">info@domainname.com</a>
+              </li>
+              <li>
+                <a href="https://goo.gl/maps/XYZ" target="_blank"
+                  >520, West Valley, Amin and Minim</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-    </section>
+
+      <div class="footer-bottom">
+        <p>&copy; 2025 IT-Wings Webtech Solutions. All Rights Reserved.</p>
+      </div>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
