--- a/serviceInfo.html
+++ b/serviceInfo.html
@@ -143,14 +143,19 @@
     </section>
 
     <!-- ===== Service Banner ===== -->
+    <!-- banner -->
     <section
-      class="service-banner"
-      style="background-image: url(images/career-1.jpg)"
+      class="global-banner"
+      style="background-image: url(images/career/career-1.jpg)"
     >
-      <!-- <div class="overlay"></div> -->
-      <!-- <div class="banner-content">
-        <h1>Software Development</h1>
-      </div> -->
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="global-wrapper">
+          <div class="global-content">
+            <!-- <h1>About Us</h1> -->
+          </div>
+        </div>
+      </div>
     </section>
 
     <main>
@@ -176,24 +181,45 @@
       <!-- ===== Requirements Section ===== -->
       <section class="service-requirements">
         <div class="container">
-          <h2>Requirements for This Service</h2>
-          <ul>
-            <li>
-              <i class="fa-solid fa-check"></i> Project brief or documentation
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i> Design assets (if available)
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i> Business goals & feature list
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i> Technical stack preferences
-            </li>
-            <li>
-              <i class="fa-solid fa-check"></i> Timeline & budget estimation
-            </li>
-          </ul>
+          <div class="requirements-wrapper">
+            <!-- Left Side: List -->
+            <div class="requirements-list">
+              <h2>Requirements for This Service</h2>
+              <ul>
+                <li>
+                  <i class="fa-solid fa-check"></i> Project brief or
+                  documentation
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i> Design assets (if available)
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i> Business goals & feature
+                  list
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i> Technical stack preferences
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i> Timeline & budget estimation
+                </li>
+              </ul>
+            </div>
+
+            <!-- Right Side: Visual / CTA Block -->
+            <div class="requirements-visual">
+              <figure>
+                <img src="images/career-2.jpg" alt="Service Visual" />
+              </figure>
+              <div class="quote-box">
+                <p>
+                  “We don’t just build IT solutions — we build your business’s
+                  digital foundation with precision, creativity, and purpose.”
+                </p>
+                <a href="contact1.html" class="cta-btn">Request a Quote</a>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -237,10 +263,6 @@
               <h3>Digital Marketing</h3>
               <a href="#" class="view-btn">View Details</a>
             </div>
-          </div>
-
-          <div class="contact-section">
-            <a href="contact1.html" class="contact-btn">Contact Us</a>
           </div>
         </div>
       </section>
